fix UI: menu in details view delete the padding on right and left on top menu on mobile screen

--- a/static/css/public/_mattress.scss
+++ b/static/css/public/_mattress.scss
@@ -38,6 +38,11 @@
         background-color: $color-gallery;
         @include position(relative);
 
+        @include media-xs {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
         &:before {
             content: '';
             width: 500%;
